fix: some issues

--- a/styles/bottomSheet.scss
+++ b/styles/bottomSheet.scss
@@ -2,7 +2,7 @@
 }
 
 [data-rsbs-overlay] {
-  z-index: 99;
+  z-index: 99 !important;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
 }
@@ -20,5 +20,5 @@
 }
 
 [data-rsbs-backdrop] {
-  z-index: 98;
+  z-index: 98 !important;
 }
