--- a/styles/components/molecules/qualifacationModal.module.scss
+++ b/styles/components/molecules/qualifacationModal.module.scss
@@ -1,69 +1,69 @@
 .qualificationModal {
-    width: auto;
-    height: auto;
-    text-align: center;
-    @media (min-width: 1025px) {
-        max-height: 528px;
-        width: 343px;
-    }
+  width: auto;
+  height: auto;
+  text-align: center;
+  @media (min-width: 1025px) {
+    max-height: 528px;
+    width: 343px;
+  }
 }
 
 .modalBanner {
-    display: block;
-    margin: 0 auto;
-    width: 200px;
-    max-height: 200px;
-    margin-top: 24px;
-    margin-bottom: 4px;
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  max-height: 200px;
+  margin-top: 24px;
+  margin-bottom: 4px;
 }
 
 .modalTitle {
-    font-family: 'Kanyon';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #13131B;
-    margin-bottom: 16px;
+  font-family: 'Kanyon';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #13131b;
+  margin-bottom: 16px;
 }
 
 .modalContent {
-    font-size: 12px;
-    font-family: 'Open Sans';
-    color: #13131B;
-    margin-bottom: 24px;
+  font-size: 12px;
+  font-family: 'OpenSans';
+  color: #13131b;
+  margin-bottom: 24px;
 }
 
 .itemContent {
-    display: flex;
-    flex-direction: row;
-    font-size: 12px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  font-size: 12px;
+  justify-content: center;
+  align-items: center;
 }
 
 .itemStep {
-    margin-bottom: 12px;
-    background-color: #F3F9FD;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 8px 12px;
-    gap: 2px;
-    border-radius: 8px;
+  margin-bottom: 12px;
+  background-color: #f3f9fd;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 8px 12px;
+  gap: 2px;
+  border-radius: 8px;
 }
 
 .numberItem {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 4px;
-    gap: 8px;
-    width: 24px;
-    height: 24px;
-    background: #CBE5F4;
-    border-radius: 52px;
-    color: #246ED4;
-    margin-right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  gap: 8px;
+  width: 24px;
+  height: 24px;
+  background: #cbe5f4;
+  border-radius: 52px;
+  color: #246ed4;
+  margin-right: 12px;
 }
