--- a/styles/global.scss
+++ b/styles/global.scss
@@ -7,6 +7,7 @@
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
+  font-family: 'OpenSans';
 }
 
 body {
