fix: filter pdp mobile styling

--- a/styles/pages/navigationfiltermobile.module.scss
+++ b/styles/pages/navigationfiltermobile.module.scss
@@ -179,6 +179,7 @@
   flex: none;
   order: 0;
   margin-left: 70px; // space left for width filter and icon
+  padding-right: 65px;
 }
 
 .filterActiveWrapper::-webkit-scrollbar {
