fix: benefit card styling when car recomendation empty

--- a/styles/components/organism/creditTab.module.scss
+++ b/styles/components/organism/creditTab.module.scss
@@ -92,6 +92,10 @@
   border-radius: 8px;
 }
 
+.benefitCardAdditonalStyle {
+  margin-top: 24px;
+}
+
 .benefitAdditionalStyle {
   margin: 0 !important;
 }
