feat: add utm footer mobile

--- a/styles/components/organism/footerMobile.module.scss
+++ b/styles/components/organism/footerMobile.module.scss
@@ -78,3 +78,13 @@
   line-height: 16px;
   color: #{$primary-white};
 }
+
+.utmText {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 16px;
+  margin-top: 5px;
+  color: #{$primary-white};
+}
