--- a/styles/components/organisms/carOfTheMonth.module.scss
+++ b/styles/components/organisms/carOfTheMonth.module.scss
@@ -136,6 +136,7 @@
   height: 144px;
   z-index: 999;
   border-radius: 8px;
+  object-fit: cover;
 }
 .textButton {
   font-family: var(--open-sans);
