--- a/styles/components/atoms/tabV2.module.scss
+++ b/styles/components/atoms/tabV2.module.scss
@@ -40,9 +40,8 @@
 }
 
 .textActive {
-  font-family: var(--open-sans)-semiBold;
+  font-family: var(--open-sans-semi-bold);
   font-style: normal;
-  font-weight: 600;
   font-size: 14px;
   line-height: 20px;
   color: #{$primary-dark-blue};
