--- a/styles/components/molecules/car-brand-item.scss
+++ b/styles/components/molecules/car-brand-item.scss
@@ -39,7 +39,7 @@
 }
 
 .text-brand-and-name-cbi {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
@@ -47,14 +47,14 @@
   color: #404040;
 
   @media (min-width: 1025px) {
-    font-family: 'KanyonBold';
+    font-family: var(--kanyon-bold);
     font-size: 20px;
     line-height: 24px;
   }
 }
 
 .text-installment-text-cbi {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -67,7 +67,7 @@
 }
 
 .text-installment-price-cbi {
-  font-family: 'OpenSansSemiBold';
+  font-family: var(--open-sans-semi-bold);
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
