--- a/styles/components/molecules/car-brand-recommendation.scss
+++ b/styles/components/molecules/car-brand-recommendation.scss
@@ -39,14 +39,14 @@
 }
 
 .header-text-cbr {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-weight: 700;
   font-size: 14px;
   line-height: 20px;
   color: #252525;
 
   @media (min-width: 1025px) {
-    font-family: 'KanyonBold';
+    font-family: var(--kanyon-bold);
     font-style: normal;
     font-size: 24px;
     line-height: 28px;
@@ -54,7 +54,7 @@
 }
 
 .header-text-small-cbr {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 10px;
@@ -64,7 +64,7 @@
   color: #246ed4;
 
   @media (min-width: 1025px) {
-    font-family: 'KanyonBold';
+    font-family: var(--kanyon-bold);
     font-size: 14px;
     line-height: 16px;
     display: flex;
@@ -137,7 +137,7 @@
 }
 
 .text-last-card-cbr {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -182,7 +182,7 @@
 }
 
 .text-car-not-available-title-cbr {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -197,7 +197,7 @@
 }
 
 .text-car-not-available-subtitle-cbr {
-  font-family: 'KanyonMedium';
+  font-family: var(--kanyon-medium);
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
