--- a/styles/components/organisms/articleWidget.module.scss
+++ b/styles/components/organisms/articleWidget.module.scss
@@ -138,7 +138,7 @@
   position: absolute;
   top: 218px;
   p {
-    font-family: 'OpenSansBold';
+    font-family: var(--open-sans-bold);
     font-style: normal;
     font-weight: 700;
     font-size: 11px;
