--- a/styles/components/organisms/footerMobile.module.scss
+++ b/styles/components/organisms/footerMobile.module.scss
@@ -83,7 +83,7 @@
 }
 
 .utmText {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 11px;
