--- a/styles/pages/loanCalculator.module.scss
+++ b/styles/pages/loanCalculator.module.scss
@@ -23,7 +23,7 @@
 }
 
 .title {
-  font-family: 'Kanyon';
+  font-family: var(--kanyon);
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -33,7 +33,7 @@
 
 .subtitle {
   margin-top: 2px;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -50,7 +50,7 @@
 }
 
 .errorMessage {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
