--- a/styles/pages/perusahaan-pembiayaan.module.scss
+++ b/styles/pages/perusahaan-pembiayaan.module.scss
@@ -28,7 +28,7 @@
 }
 
 .headerText {
-  font-family: 'Kanyon';
+  font-family: var(--kanyon);
   font-size: 20px;
   line-height: 28px;
   margin-top: 32px;
