--- a/styles/components/atoms/tabV1.module.scss
+++ b/styles/components/atoms/tabV1.module.scss
@@ -17,7 +17,7 @@
 }
 
 .text {
-  font-family: 'Kanyon';
+  font-family: var(--kanyon);
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -26,7 +26,7 @@
 }
 
 .textActive {
-  font-family: 'KanyonMedium';
+  font-family: var(--kanyon-medium);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -51,7 +51,7 @@
   }
 
   .text {
-    font-family: 'Kanyon';
+    font-family: var(--kanyon);
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -60,7 +60,7 @@
   }
 
   .textActive {
-    font-family: 'KanyonMedium';
+    font-family: var(--kanyon-medium);
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
