--- a/styles/components/atoms/tooltip.module.scss
+++ b/styles/components/atoms/tooltip.module.scss
@@ -47,7 +47,7 @@
   }
 
   .tooltipContent {
-    font-family: 'OpenSans';
+    font-family: var(--open-sans);
     font-weight: 400;
     font-size: 14px;
     color: #{$primary-black};
