--- a/styles/components/molecules/car-body-types-desktop.scss
+++ b/styles/components/molecules/car-body-types-desktop.scss
@@ -68,7 +68,7 @@
 }
 
 .text-header-cbtd {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -77,7 +77,7 @@
 }
 
 .text-car-type-cbtd {
-  font-family: 'Kanyon';
+  font-family: var(--kanyon);
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -98,7 +98,7 @@
 }
 
 .text-car-last-card-cbtd {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -116,7 +116,7 @@
 }
 
 .text-car-not-available-title-cbtd {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -131,7 +131,7 @@
 }
 
 .text-car-not-available-subtitle-cbtd {
-  font-family: 'KanyonMedium';
+  font-family: var(--kanyon-medium);
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -189,7 +189,7 @@
 }
 
 .header-text-small-cbtd {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 10px;
@@ -199,7 +199,7 @@
   color: #246ed4;
 
   @media (min-width: 1025px) {
-    font-family: 'KanyonBold';
+    font-family: var(--kanyon-bold);
     font-size: 14px;
     line-height: 16px;
     display: flex;
