--- a/styles/components/molecules/car-of-month.scss
+++ b/styles/components/molecules/car-of-month.scss
@@ -12,7 +12,7 @@
 }
 
 .title-com {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-size: 20px;
   line-height: 28px;
   color: #252525;
@@ -80,7 +80,7 @@
 }
 
 .brand-text-com {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
@@ -175,7 +175,7 @@
 }
 
 .car-title-com {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-size: 24px;
   line-height: 28px;
   margin-bottom: 8px;
@@ -186,7 +186,7 @@
 }
 
 .car-desc-com {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-size: 14px;
   line-height: 20px;
   height: 160px;
@@ -218,7 +218,7 @@
   padding: 10px;
   border: 1px solid #e4e9f1;
 
-  font-family: 'OpenSansBold';
+  font-family: var(--open-sans-bold);
   font-size: 12px;
   line-height: 14px;
   color: #ffffff;
@@ -232,7 +232,7 @@
   padding: 10px;
   border: 1px solid #e4e9f1;
 
-  font-family: 'OpenSansBold';
+  font-family: var(--open-sans-bold);
   font-size: 12px;
   line-height: 14px;
   color: #ffffff;
