--- a/styles/components/molecules/dp/cicilform.module.scss
+++ b/styles/components/molecules/dp/cicilform.module.scss
@@ -20,7 +20,7 @@
 
 .buttonOption {
   background: #{$primary-white};
-  font-family: 'Kanyon';
+  font-family: var(--kanyon);
   margin: 5px 0;
   width: 300px;
   height: 64px;
@@ -41,7 +41,7 @@
 }
 
 .buttonOptionText {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -49,7 +49,7 @@
   color: #252525;
   text-align: left;
   &.is-clicked {
-    font-family: 'OpenSansSemiBold';
+    font-family: var(--open-sans-semi-bold);
     color: #{$secondary-sky-blue};
   }
   @media (max-width: 1024px) {
