--- a/styles/components/molecules/loan-calculator-widget.scss
+++ b/styles/components/molecules/loan-calculator-widget.scss
@@ -9,7 +9,7 @@
 }
 
 .title-lcw {
-  font-family: 'KanyonBold';
+  font-family: var(--kanyon-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -23,7 +23,7 @@
 
 .subtitle-lcw {
   margin-top: 6px;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -93,7 +93,7 @@
 
 .car-name-lcw {
   width: 100%;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -114,7 +114,7 @@
 
 .car-price-lcw {
   width: 100%;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 700;
   font-size: 8px;
@@ -130,7 +130,7 @@
 
 .example-wording-lcw {
   margin-left: 4px;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: italic;
   font-weight: 400;
   font-size: 6px;
