--- a/styles/components/organisms/calculationResult.module.scss
+++ b/styles/components/organisms/calculationResult.module.scss
@@ -9,7 +9,7 @@
 }
 
 .title {
-  font-family: 'Kanyon';
+  font-family: var(--kanyon);
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -20,7 +20,7 @@
 
 .subtitle {
   margin-top: 2px;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -40,7 +40,7 @@
 }
 
 .dataHeaderText {
-  font-family: 'OpenSansBold';
+  font-family: var(--open-sans-bold);
   font-style: normal;
   font-weight: 700;
   font-size: 11px;
@@ -77,7 +77,7 @@
   align-items: center;
   justify-content: center;
   gap: 4px;
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-size: 14px;
   line-height: 20px;
   text-align: center;
@@ -94,7 +94,7 @@
 }
 
 .disclaimerText {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-style: normal;
   font-weight: 400;
   font-size: 11px;
