--- a/styles/components/organisms/promoPopupPdp.module.scss
+++ b/styles/components/organisms/promoPopupPdp.module.scss
@@ -38,7 +38,7 @@
   color: #ffffff !important;
 }
 .kanyonMedium {
-  font-family: 'KanyonMedium';
+  font-family: var(--kanyon-medium);
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -46,14 +46,14 @@
 }
 
 .openSansSemiBold {
-  font-family: 'OpenSansSemiBold';
+  font-family: var(--open-sans-semi-bold);
   font-weight: 600;
   font-size: 14px;
   line-height: 20px;
   color: #000000;
 }
 .openSans {
-  font-family: 'OpenSans';
+  font-family: var(--open-sans);
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
