chore : optimize font for inline style and other missed styling

--- a/styles/pages/account-profile.module.scss
+++ b/styles/pages/account-profile.module.scss
@@ -251,7 +251,7 @@
 .titleText {
   font-size: 20px;
   line-height: 28px;
-  font-family: 'Kanyon', sans-serif;
+  font-family: var(--kanyon);
   font-weight: 400;
   margin-bottom: 8px;
 }
