--- a/styles/pages/ktp-verifikasi.module.scss
+++ b/styles/pages/ktp-verifikasi.module.scss
@@ -250,7 +250,7 @@
 .titleText {
   font-size: 20px;
   line-height: 28px;
-  font-family: 'Kanyon', sans-serif;
+  font-family: var(--kanyon);
   font-weight: 400;
   margin-top: 10px;
 }
