--- a/styles/components/organisms/articleWidget.module.scss
+++ b/styles/components/organisms/articleWidget.module.scss
@@ -12,7 +12,7 @@
 .images {
   border-top-left-radius: '8px';
   border-top-right-radius: '8px';
-  width: '100%';
+  width: 100%;
   height: '258px';
   object-fit: cover;
 }
