change img to Image from next

--- a/styles/components/molecules/loan-calculator-widget.scss
+++ b/styles/components/molecules/loan-calculator-widget.scss
@@ -83,7 +83,7 @@
     border-radius: 4px;
   }
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
 
   @media (min-width: 1025px) {
