--- a/styles/pages/perusahaan-pembiayaan.module.scss
+++ b/styles/pages/perusahaan-pembiayaan.module.scss
@@ -93,7 +93,7 @@
 .agreementTerms {
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
   margin-top: 40px;
 }
 
