--- a/styles/pages/ktp-edit.module.scss
+++ b/styles/pages/ktp-edit.module.scss
@@ -160,7 +160,7 @@
   gap: 12px;
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -336,7 +336,7 @@
 
 .checkbox__wrapper {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   margin: 20px auto;
   .checkbox__list {
     border-radius: 4px;
