--- a/styles/pages/ktp-verifikasi.module.scss
+++ b/styles/pages/ktp-verifikasi.module.scss
@@ -159,7 +159,7 @@
   gap: 12px;
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -335,7 +335,7 @@
 
 .checkbox__wrapper {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   margin: 20px auto;
   .checkbox__list {
     border-radius: 4px;
