--- a/styles/components/organisms/summary.module.scss
+++ b/styles/components/organisms/summary.module.scss
@@ -77,7 +77,7 @@
 }
 
 .wrapperDetail {
-  background-image: 'linear-gradient(to bottom, rgba(255,0,0,0), black);';
+  background-image: 'linear-gradient(to bottom, rgba(255,0,0,0), black)';
 }
 .wrapperTextBanner {
   display: flex;
