--- a/styles/components/organisms/cardetailcard.module.scss
+++ b/styles/components/organisms/cardetailcard.module.scss
@@ -33,7 +33,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .contentWrapper {
@@ -48,6 +47,15 @@
   position: absolute;
   z-index: 3;
   left: 0;
+  top: 96px;
+  cursor: pointer;
+}
+
+.logoImg {
+  position: absolute;
+  z-index: 3;
+  right: 0;
+  margin-right: 16px;
   top: 96px;
 }
 
@@ -112,8 +120,8 @@
   line-height: 20px;
   color: #{$secondary-blue};
   margin-bottom: 24px;
+  cursor: pointer;
 }
-
 
 .overlayAdditionalStyle {
   background-color: transparent;
