--- a/styles/global.scss
+++ b/styles/global.scss
@@ -302,9 +302,12 @@ button {
 
 .search-custom-modal .ant-modal-content {
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
   margin: 0;
   top: 0;
   border-radius: 0;
   padding: 0;
+  @media (max-width: 1024px) {
+    height: 0;
+  }
 }
