--- a/styles/global.scss
+++ b/styles/global.scss
@@ -343,3 +343,75 @@ button {
   right: 0;
   @include centeredWithMaxWidth;
 }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes shake-animation-X {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(8px);
+  }
+  75% {
+    transform: translateX(-8px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.rotateAnimation {
+  animation: rotate 1s linear infinite;
+}
+
+.shake-animation-X {
+  animation: shake-animation-X 0.2s ease-in-out 0s 2;
+}
+
+.shake-animation-X-2 {
+  animation: shake-animation-X 0.2s ease-in-out 0s 5;
+}
+
+.multiKKSliderError {
+  .ant-slider-handle:focus::after {
+    box-shadow: 0 0 0 2px #{$primary-red};
+  }
+  .ant-slider-handle::after {
+    box-shadow: 0 0 0 2px #{$primary-red};
+  }
+}
+
+[data-rsbs-overlay] {
+  z-index: 99 !important;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+[data-rsbs-header] {
+  padding: 0;
+}
+
+[data-rsbs-has-header='false'] [data-rsbs-header] {
+  padding-top: 24px;
+}
+
+[data-rsbs-header]:before {
+  height: 0;
+}
+
+[data-rsbs-backdrop] {
+  z-index: 98;
+}
+
+.qualification-custom-modal .ant-modal-content {
+  @include centeredWithMaxWidth(343.33px);
+}
