--- a/styles/components/molecules/dp/cicilform.module.scss
+++ b/styles/components/molecules/dp/cicilform.module.scss
@@ -14,37 +14,42 @@
 }
 
 .cicilOptionForm {
-  border-radius: 12px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .buttonOption {
-  background: #{$primary-white};
-  font-family: var(--kanyon);
-  margin: 5px 0;
+  background: #{$primary-white} !important;
+  padding: 12px 16px !important;
   width: 100%;
-  height: 56px;
+  height: auto;
   border-radius: 8px;
   text-align: left;
-  border: 1.5px solid #{$shades-grey-10};
-  &.is-clicked {
-    background: #{$shades-sky-blue-5};
-    border: 1.5px solid #{$secondary-sky-blue};
-  }
+  border: 1px solid #{$shades-grey-10};
 }
 
 .buttonOptionText {
-  font-family: var(--open-sans);
+  font-family: 'OpenSans';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
-  color: #252525;
+  line-height: 20px;
+  color: #{$primary-black};
   text-align: left;
 }
 
 .titleTextDP {
+  margin-top: 2px;
   font-size: 12px;
+  font-family: 'OpenSans';
+  font-weight: 400;
+  line-height: 18px;
   color: #{$shades-grey-75};
-  padding-bottom: 8px;
+}
+
+.selectedStyle {
+  background: rgba(243, 249, 253, 0.50) !important;
+  border: 2px solid #{$secondary-sky-blue};
 }
