--- a/styles/components/organisms/usedCarDetailCard.module.scss
+++ b/styles/components/organisms/usedCarDetailCard.module.scss
@@ -24,16 +24,11 @@
 }
 
 .brandModelText {
-  font-family: var(--kanyon-medium);
+  font-family: $font-kanyon-medium;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
-  color: #13131b;
-  margin-bottom: 16px;
-}
-
-.cardWrapper {
   padding: 16px;
   width: 100%;
   display: flex;
