--- a/styles/components/organisms/usedCarDetailCard.module.scss
+++ b/styles/components/organisms/usedCarDetailCard.module.scss
@@ -29,6 +29,11 @@
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
+  color: #13131b;
+  margin-bottom: 16px;
+}
+
+.cardWrapper {
   padding: 16px;
   width: 100%;
   display: flex;
