fix: filter year,mileage,price,brand usedCar

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -467,3 +467,7 @@ span.ant-select-selection-item {
   display: flex;
   align-items: center;
 }
+
+span.ant-select-selection-placeholder {
+  font-size: 14px !important;
+}
