--- a/styles/global.scss
+++ b/styles/global.scss
@@ -463,6 +463,7 @@ span.ant-select-selection-item {
   background-color: #{$shades-grey-5} !important;
   border-radius: 8px !important;
   font-weight: 600 !important;
+  font-size: 12px;
   color: #{$shades-grey-75} !important;
   padding: 4px 8px !important;
   border: 0 !important;
