--- a/styles/components/molecules/form/formSearchTransmission.module.scss
+++ b/styles/components/molecules/form/formSearchTransmission.module.scss
@@ -2,13 +2,8 @@
 @import '../../../abstract/mixins';
 
 .container {
-  padding: 16px 24px !important;
+  padding: 16px 24px;
   width: 100%;
-}
-
-.wrapperBox {
-  display: flex;
-  gap: 16px;
 }
 
 .box {
@@ -27,7 +22,7 @@
   background: white;
   border: 1px solid #{$shades-grey-10};
   cursor: pointer;
-  box-sizing: border-box;
+
   border-radius: 8px;
   // flex: none;
   // order: 0;
@@ -55,50 +50,6 @@
 
   border-radius: 8px;
   flex: 1;
-}
-
-@media (max-width: 370px) {
-  .box {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 12px 16px;
-    gap: 8px;
-    max-width: 123.5px;
-    height: 44px;
-    //background: #F3F9FD;
-    //border: 2px solid #51A8DB;
-    background: white;
-    border: 1px solid #{$shades-grey-10};
-    cursor: pointer;
-    box-sizing: border-box;
-    border-radius: 8px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-  }
-
-  .boxOnclick {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 11px 16px;
-    gap: 8px;
-    max-width: 123.5px;
-    height: 44px;
-    background: #{$shades-sky-blue-5};
-    border: 2px solid #{$secondary-sky-blue};
-    cursor: pointer;
-
-    border-radius: 8px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-  }
 }
 
 .wrapperHeader {
@@ -145,7 +96,7 @@
   flex-grow: 0;
 }
 
-.wrapperBox {
+.childContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
