--- a/styles/components/molecules/form/formYear.module.scss
+++ b/styles/components/molecules/form/formYear.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 8px;
+  gap: 16px;
   justify-content: space-between;
   width: 100%;
   height: 100px;
@@ -20,12 +20,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
+  gap: 16px;
   height: 100px;
-  flex: auto;
+  flex: 1;
   order: 0;
   align-self: stretch;
-  flex-grow: 0;
+  // flex-grow: 0;
   padding: 16px 0px 0px 0px;
 }
 
@@ -75,7 +75,7 @@
   background: white;
   border: 1px solid #{$shades-grey-10};
   border-radius: 8px;
-  flex: none;
+  flex: 1;
   order: 1;
   align-self: stretch;
   flex-grow: 0;
