adjust styling for year in search widget

--- a/styles/components/molecules/form/formYear.module.scss
+++ b/styles/components/molecules/form/formYear.module.scss
@@ -28,7 +28,9 @@
   // flex-grow: 0;
   padding: 16px 0px 0px 0px;
 }
-
+.errorContainer {
+  margin-bottom: 40px;
+}
 .errorMessage {
   order: 1;
 }
