--- a/styles/global.scss
+++ b/styles/global.scss
@@ -36,6 +36,12 @@ p {
   font-size: 16px;
 }
 
+@media only screen and (max-width: 1024px) {
+  p {
+    font-size: 14px;
+  }
+}
+
 h1,
 .h1 {
   @include h1;
@@ -58,10 +64,6 @@ h3,
   &.medium {
     @include h3(medium);
   }
-}
-
-p {
-  font-size: 14px;
 }
 
 button {
