--- a/styles/components/molecules/form/formSearchYear.module.scss
+++ b/styles/components/molecules/form/formSearchYear.module.scss
@@ -1,18 +1,38 @@
 @import '../../../abstract/colors';
 @import '../../../abstract/mixins';
 
+.mainContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 16px;
+  justify-content: space-between;
+  width: 100%;
+  height: 100px;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  padding: 0px 24px 0px 24px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  width: 100%;
-  flex: none;
+  height: 100px;
+  flex: 1;
   order: 0;
   align-self: stretch;
-  flex-grow: 0;
-  margin-bottom: 24px;
-  position: relative;
+  // flex-grow: 0;
+  padding: 16px 0px 0px 0px;
+}
+.errorContainer {
+  margin-bottom: 20px;
+}
+.errorMessage {
+  order: 1;
 }
 
 .wrapperHeader {
@@ -44,32 +64,29 @@
 }
 
 .inputStyle {
-  width: 100%;
-  font-family: $font-openSans;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.clearSelect {
-  color: #246ed4;
-  cursor: pointer;
-}
-
-.optionSelect {
-  padding: 18px 16px;
-}
-
-.dropdownDivider {
-  padding: 12px 16px;
+  box-sizing: border-box;
   display: flex;
-  width: 100%;
   flex-direction: row;
-  justify-content: space-between;
-  .totalChosen {
-    color: #{$shades-grey-75} !important;
+  align-items: center;
+  padding: 12px 16px;
+  font-family: $font-openSans;
+  text-align: center;
+  gap: 8px;
+  height: 48px;
+  width: 100%;
+  background: white;
+  border: 1px solid #{$shades-grey-10};
+  border-radius: 8px;
+  flex: 1;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+
+  input {
+    font-family: $font-openSans;
   }
 }
+
 .inputStyleError {
   box-sizing: border-box;
   display: flex;
@@ -77,6 +94,7 @@
   align-items: center;
   padding: 12px 16px;
   font-family: $font-openSans;
+  text-align: center;
   gap: 8px;
   width: 100%;
   height: 48px;
@@ -96,6 +114,10 @@
   input {
     font-family: $font-openSans;
   }
+}
+
+.slider {
+  padding: 8px 30px 0px 30px;
 }
 
 .textWrapperSlider {
@@ -138,7 +160,6 @@
   font-size: 12px;
   color: #{$secondary-brick-red};
   display: block;
-  padding-left: 24px;
   line-height: 18px;
 }
 
@@ -148,22 +169,4 @@
   color: #{$secondary-blue};
   padding-left: 24px;
   line-height: 18px;
-}
-
-.notFound {
-  padding: 16px;
-  color: #{$shades-grey-75};
-}
-
-.removeIcon {
-  background-color: #{$shades-grey-75} !important;
-  height: 12.8px;
-  width: 12.8px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &:hover {
-    background-color: #{$shades-grey-50} !important;
-  }
 }
