adjust style tab credit, desc

--- a/styles/components/organisms/creditUsedCarTab.module.scss
+++ b/styles/components/organisms/creditUsedCarTab.module.scss
@@ -5,6 +5,7 @@
 .container {
   padding: 24px 0 0;
   background-color: #{$primary-white};
+  box-shadow: inset 0px 6px 12px -1px rgba(76, 82, 95, 0.08);
 }
 
 .wrapper {
