--- a/styles/components/molecules/navigationTabV1.module.scss
+++ b/styles/components/molecules/navigationTabV1.module.scss
@@ -20,20 +20,18 @@ $layarHP: 375px;
   @media screen and (max-width: $layarHP) {
     background: #{$primary-white};
     border-bottom: 2px solid #{$shades-grey-10};
-    box-shadow: 0px 6px 14px 1px rgba(76, 82, 95, 0.08);
+    // box-shadow: 0px 6px 14px 1px rgba(76, 82, 95, 0.08);
     padding: 12px 56px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 8px;
     overflow-x: hidden;
-    border-radius: 16px;
     z-index: 4;
   }
   background: #{$primary-white};
-  border-radius: 16px;
   border-bottom: 2px solid #{$shades-grey-10};
-  box-shadow: 0px 6px 14px 1px rgba(76, 82, 95, 0.08);
+  // box-shadow: 0px 6px 14px 1px rgba(76, 82, 95, 0.08);
   padding: 12px 56px;
   display: flex;
   align-items: center;
