adjust styling padding tab credit, desc

--- a/styles/components/organisms/creditUsedCarTab.module.scss
+++ b/styles/components/organisms/creditUsedCarTab.module.scss
@@ -19,7 +19,7 @@
 
 .formCard {
   background-color: #{$primary-white};
-  padding: 16px 16px 41px;
+  // padding: 16px 16px 41px;
   margin: 0 16px 0;
   border-radius: 8px;
   display: flex;
