--- a/styles/components/molecules/searchWidget/selectWidgetUsedCar.module.scss
+++ b/styles/components/molecules/searchWidget/selectWidgetUsedCar.module.scss
@@ -51,6 +51,21 @@
   }
 }
 
+.placeholderNotEmpty {
+  font-family: var(--open-sans-semi-bold);
+  font-size: 14px;
+  line-height: 20px;
+  color: #13131b;
+  text-shadow: 0px 4px 84px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  &.focused {
+    margin-right: 5px;
+  }
+}
+
 .textArrowWrapper {
   display: flex;
   flex-direction: row;
