--- a/styles/components/molecules/usedCarOverlayGallery.module.scss
+++ b/styles/components/molecules/usedCarOverlayGallery.module.scss
@@ -115,3 +115,24 @@
   right: 0;
   margin-right: 12px;
 }
+
+@media screen and (orientation: landscape) {
+  .mainImageMob {
+    width: 100%;
+    height: 125px;
+    object-fit: contain;
+  }
+  .swiperPreviewNavigationMob {
+    width: 100%;
+
+    margin-bottom: 10px;
+    margin-top: 40px;
+  }
+  .subImageMob {
+    width: 86px;
+    height: 64px;
+    border-radius: 8px;
+    object-fit: cover;
+    margin-right: 8px !important;
+  }
+}
