--- a/styles/components/organisms/searchWidgetSection.module.scss
+++ b/styles/components/organisms/searchWidgetSection.module.scss
@@ -3,15 +3,28 @@
 
 .container {
   margin-bottom: 75px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 24px;
 }
 
 .upperSpacing {
   width: 100%;
-  height: 24px;
+  height: 40px;
   background: #{$primary-white};
 }
 
 .content {
   z-index: 1;
+  padding: 24px;
+}
+
+.cardContainer {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  min-height: 344px;
   height: 100%;
+  transition: max-height 1s ease;
 }
