--- a/styles/components/organisms/searchWidgetSection.module.scss
+++ b/styles/components/organisms/searchWidgetSection.module.scss
@@ -6,7 +6,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 24px;
 }
 
 .upperSpacing {
@@ -17,7 +16,8 @@
 
 .content {
   z-index: 1;
-  padding: 24px;
+  margin-top: 20px;
+  padding-bottom: 10px;
 }
 
 .cardContainer {
