--- a/styles/components/organisms/promoBottomSheet.module.scss
+++ b/styles/components/organisms/promoBottomSheet.module.scss
@@ -70,9 +70,13 @@
 }
 
 .bottomSheet [data-rsbs-overlay] {
-  @include centeredWithMaxWidth;
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .bottomSheet [data-rsbs-backdrop] {
-  @include centeredWithMaxWidth;
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
 }
