adjust behavior in overlay pdp, remove padding in search model

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -433,29 +433,21 @@ button {
   display: none !important;
 }
 
-.ant-select-focused:where(.css-dev-only-do-not-override-n7fj3n).ant-select:not(
-    .ant-select-disabled
-  ):not(.ant-select-customize-input):not(.ant-pagination-size-changer)
+.ant-select-focused.ant-select:not(.ant-select-disabled):not(
+    .ant-select-customize-input
+  ):not(.ant-pagination-size-changer)
   .ant-select-selector {
   border-color: #246ed4 !important;
 }
 
-.ant-select-focused
-  :where(.css-dev-only-do-not-override-n7fj3n).ant-select:not(
-    .ant-select-disabled
-  ):not(.ant-select-customize-input):not(.ant-pagination-size-changer)
+.ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(
+    .ant-pagination-size-changer
+  ):hover
   .ant-select-selector {
   border-color: #246ed4 !important;
 }
 
-:where(.css-dev-only-do-not-override-n7fj3n).ant-select:not(
-    .ant-select-disabled
-  ):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover
-  .ant-select-selector {
-  border-color: #246ed4 !important;
-}
-
-:where(.css-dev-only-do-not-override-n7fj3n).ant-select-dropdown {
+.ant-select-dropdown {
   padding: 0px !important;
 }
 
