--- a/styles/abstract/_mixins.scss
+++ b/styles/abstract/_mixins.scss
@@ -110,3 +110,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@mixin centeredWithMaxWidthExtend($maxWidth: 720px) {
+  max-width: $maxWidth;
+  margin-left: auto;
+  margin-right: auto;
+}
