--- a/styles/components/organisms/calculationResult.module.scss
+++ b/styles/components/organisms/calculationResult.module.scss
@@ -129,3 +129,7 @@
 .overlayAdditionalStyle {
   @include centeredWithMaxWidth;
 }
+
+.overlayAdditionalStyleExtend {
+  @include centeredWithMaxWidthExtend;
+}
