--- a/styles/pages/detik.module.scss
+++ b/styles/pages/detik.module.scss
@@ -4,9 +4,7 @@
 
 .container {
   background: #{$primary-white};
-  max-width: 720px;
-  margin-left: auto;
-  margin-right: auto;
+  @include centeredWithMaxWidthExtend;
 }
 
 .content {
