adjust styling in search widget

--- a/styles/components/organisms/searchWidgetSection.module.scss
+++ b/styles/components/organisms/searchWidgetSection.module.scss
@@ -18,11 +18,10 @@
 .content {
   z-index: 1;
   margin-top: 20px;
-  padding-bottom: 10px;
 }
 
 .cardContainer {
-  padding: 24px;
+  padding: 16px 0px;
   display: flex;
   flex-direction: column;
   min-height: 344px;
