add conditional for tooltip

--- a/styles/components/atoms/tooltip.module.scss
+++ b/styles/components/atoms/tooltip.module.scss
@@ -61,3 +61,7 @@
 .overlayAdditionalStyle {
   @include centeredWithMaxWidth;
 }
+
+.overlayAdditionalStyleExtend {
+  @include centeredWithMaxWidthExtend;
+}
