--- a/styles/components/molecules/calculationResultItem.module.scss
+++ b/styles/components/molecules/calculationResultItem.module.scss
@@ -22,6 +22,7 @@
   justify-content: center;
   text-align: center;
   border-radius: 8px 8px 0 0;
+  cursor: pointer;
 
   font-family: var(--open-sans-bold);
   font-size: 11px;
