--- a/styles/pages/kk-waiting-result.module.scss
+++ b/styles/pages/kk-waiting-result.module.scss
@@ -5,9 +5,11 @@
   width: 100%;
   box-shadow: 0px 6px 14px 1px rgba(76, 82, 95, 0.08);
   position: fixed;
+  @include mobileView;
 }
 
 .container {
+  @include mobileView;
   display: flex;
   flex-direction: column;
   width: 100%;
