adjust search widget reset behavior, add cursor pointer in submenu sidebar

--- a/styles/components/atoms/menuItem.module.scss
+++ b/styles/components/atoms/menuItem.module.scss
@@ -60,6 +60,7 @@ $slide-content-height: 20px;
     font-size: 14px;
     color: #{$secondary-blue};
     display: block;
+    cursor: pointer;
   }
 }
 
