--- a/styles/global.scss
+++ b/styles/global.scss
@@ -522,3 +522,16 @@ span.ant-select-selection-placeholder {
 .refinancing-custom-form-modal .ant-modal-content {
   padding: 0;
 }
+
+div.ant-collapse-content-box {
+  padding: 16px !important;
+}
+
+div.collapse-header {
+  padding: 24px 16px;
+  padding-inline-start: 0;
+}
+
+.ant-collapse {
+  border-radius: 0;
+}
